# VadaxSDK

./: CMakeLists.txt  LICENSE  README.md
VxWidget/: CMakeLists.txt  README.md  main.cpp  vxabstractbutton.cpp  vxabstractbutton.h  vxcheckbox.cpp  vxcheckbox.h  vxcombobox.cpp  vxcombobox.h  vxdialog.cpp  vxdialog.h  vxpushbutton.cpp  vxpushbutton.h  vxwidget.cpp  vxwidget.h
doc/: Index.md  README.md
examples/: main.cpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Array/: Array.h  CMakeLists.txt
src/Core/Array/src/: Array.cpp
src/Core/Array/tests/: test.cpp
src/Core/Calendar/: CMakeLists.txt  Calendar.h
src/Core/Calendar/src/: Calendar.cpp
src/Core/Calendar/tests/: test.cpp
src/Core/Date/: CMakeLists.txt  Date.h
src/Core/Date/src/: Date.cpp
src/Core/Date/tests/: test.cpp
src/Core/DateTime/: CMakeLists.txt  DateTime.h
src/Core/DateTime/src/: DateTime.cpp
src/Core/DateTime/tests/: test.cpp
src/Core/Debug/: CMakeLists.txt  Debug.h
src/Core/Debug/src/: Debug.cpp
src/Core/Debug/tests/: test.cpp
src/Core/Dir/: CMakeLists.txt  Dir.h
src/Core/Dir/src/: Dir.cpp
src/Core/Dir/tests/: test.cpp
src/Core/Event/: CMakeLists.txt  Event.h
src/Core/Event/src/: Event.cpp
src/Core/Event/tests/: test.cpp
src/Core/File/: CMakeLists.txt  File.h
src/Core/File/src/: File.cpp
src/Core/File/tests/: test.cpp
src/Core/FileDevice/: CMakeLists.txt  FileDevice.h
src/Core/FileDevice/src/: FileDevice.cpp
src/Core/FileDevice/tests/: test.cpp
src/Core/FileInfo/: CMakeLists.txt  FileInfo.h
src/Core/FileInfo/src/: FileInfo.cpp
src/Core/FileInfo/tests/: test.cpp
src/Core/FileSystemWatcher/: CMakeLists.txt  FileSystemWatcher.h
src/Core/FileSystemWatcher/src/: FileSystemWatcher.cpp
src/Core/FileSystemWatcher/tests/: test.cpp
src/Core/MimeData/: CMakeLists.txt  MimeData.h
src/Core/MimeData/doc/: README.md
src/Core/MimeData/src/: MimeData.cpp
src/Core/MimeData/tests/: test.cpp
src/Core/MimeDatabase/: CMakeLists.txt  MimeDatabase.h
src/Core/MimeDatabase/src/: MimeDatabase.cpp
src/Core/MimeDatabase/tests/: test.cpp
src/Core/MimeType/: CMakeLists.txt  MimeType.h
src/Core/MimeType/src/: MimeType.cpp
src/Core/MimeType/tests/: test.cpp
src/Core/Object/: CMakeLists.txt  Object.h
src/Core/Object/src/: Object.cpp
src/Core/Object/tests/: test.cpp
src/Core/Process/: CMakeLists.txt  Process.h
src/Core/Process/src/: Process.cpp
src/Core/Process/tests/: test.cpp
src/Core/Settings/: CMakeLists.txt  Settings.h
src/Core/Settings/src/: Settings.cpp
src/Core/Settings/tests/: test.cpp
src/Core/Signals/: CMakeLists.txt  Signals.h
src/Core/Signals/src/: Signals.cpp
src/Core/Signals/tests/: test.cpp
src/Core/String/: CMakeLists.txt  String.h
src/Core/String/src/: String.cpp
src/Core/String/tests/: test.cpp
src/Core/StringList/: CMakeLists.txt  StringList.h
src/Core/StringList/src/: StringList.cpp
src/Core/StringList/tests/: test.cpp
src/Core/SysInfo/: CMakeLists.txt  SysInfo.h
src/Core/SysInfo/src/: SysInfo.cpp
src/Core/SysInfo/tests/: test.cpp
src/Core/Thread/: CMakeLists.txt  Thread.h
src/Core/Thread/src/: Thread.cpp
src/Core/Thread/tests/: test.cpp
src/Core/Timer/: CMakeLists.txt  Timer.h
src/Core/Timer/src/: Timer.cpp
src/Core/Timer/tests/: test.cpp
src/Core/Translator/: CMakeLists.txt  Translator.h
src/Core/Translator/src/: Translator.cpp
src/Core/Translator/tests/: test.cpp
src/Core/Vector/: CMakeLists.txt  Vector.h
src/Core/Vector/src/: Vector.cpp
src/Core/Vector/tests/: test.cpp
src/Gui/gui/: CMakeLists.txt  Makefile
