cmake_minimum_required(VERSION 3.22)
add_subdirectory(Array)
add_subdirectory(Calendar)
add_subdirectory(Date)
add_subdirectory(DateTime)
add_subdirectory(Debug)
#add_subdirectory(Dir)
add_subdirectory(Event)
add_subdirectory(File)
add_subdirectory(FileDevice)
add_subdirectory(FileInfo)
add_subdirectory(FileSystemWatcher)
add_subdirectory(Library)
add_subdirectory(MimeData)
add_subdirectory(MimeDatabase)
add_subdirectory(MimeType)
add_subdirectory(Object)
add_subdirectory(Process)
add_subdirectory(Settings)
add_subdirectory(Signals)
add_subdirectory(String)
add_subdirectory(StringList)
add_subdirectory(SysInfo)
add_subdirectory(Thread)
add_subdirectory(Timer)
add_subdirectory(Translator)
add_subdirectory(Vector)
